Changed name of files

--- a/Tai_Portfolio/template/index.html
+++ b/Tai_Portfolio/template/index.html
@@ -48,7 +48,7 @@
 						<li><a href="index-portfolio-carousel.html">portfolio carousel</a></li>
 						<li><a href="index-horizontal-scrollbar.html">horizontal scrollbar</a></li>
 						<li><a href="index-horizontal-filtered.html">horizontal filtered</a></li>
-						<li><a href="index-image-background.html">image background</a></li>
+						<li><a href="index.html">image background</a></li>
 						<li><a href="index-video-background.html">video background</a></li>
 						<li><a href="index-split-slider.html">split slider</a></li>
 						<li><a href="index-portfolio-3d.html">3D portfolio</a></li>
@@ -316,54 +316,22 @@
 	<!-- Main Content -->
 	<main>
 
-		<!-- slideshow -->
-		<div class="swiper-slideshow swiper-container">
-			<div class="swiper-wrapper">
+		<!-- Media Background -->
+		<div class="media-background" data-background="img/gallery/112.jpg" data-overlay="black; .4">
 
-				<!-- slide -->
-				<div class="swiper-slide">
-					<div class="slide-background" data-background="img/gallery/110.jpg"></div>
-					<div class="slide-caption">
-						<div class="inner">
-							<a href="#">Work it harder</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- slide -->
-				<div class="swiper-slide">
-					<div class="slide-background" data-background="img/gallery/111.jpg"></div>
-					<div class="slide-caption">
-						<div class="inner">
-							<a href="#">Make it better</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- slide -->
-				<div class="swiper-slide">
-					<div class="slide-background" data-background="img/gallery/112.jpg"></div>
-					<div class="slide-caption">
-						<div class="inner">
-							<a href="#">Makes us stronger</a>
-						</div>
-					</div>
-				</div>
-
+			<!-- Caption Text -->
+			<div class="media-background-caption">
+				<h1 data-animation="fade-in-bottom 1.2s">Hello, I'm Gambit</h1>
+				<h3 class="lead font-os" data-animation="fade-in-bottom .7s .5s">
+					<span>Front-end Developer from Norway <br> I'm</span>
+					<span class="text-light" data-typed="React lover; Traveler; Enthusiast"></span>
+				</h3>
 			</div>
-
-			<!-- slider controls -->
-			<div class="swiper-controls">
-				<div class="prev-btn"></div>
-				<div class="next-btn"></div>
-				<div class="swiper-progress">
-					<div class="inner"></div>
-				</div>
-			</div>
+			<!-- /Caption Text -->
 
 		</div>
-		<!-- /slideshow -->
-
+		<!-- Media Background -->
+		
 	</main>
 	<!-- /Main Content -->
 
