--- a/Tai_Portfolio/template/index-fullscreen-carousel.html
+++ b/Tai_Portfolio/template/index-fullscreen-carousel.html
@@ -48,7 +48,7 @@
 						<li><a href="index-portfolio-carousel.html">portfolio carousel</a></li>
 						<li><a href="index-horizontal-scrollbar.html">horizontal scrollbar</a></li>
 						<li><a href="index-horizontal-filtered.html">horizontal filtered</a></li>
-						<li><a href="index.html">image background</a></li>
+						<li><a href="index-image-background.html">image background</a></li>
 						<li><a href="index-video-background.html">video background</a></li>
 						<li><a href="index-split-slider.html">split slider</a></li>
 						<li><a href="index-portfolio-3d.html">3D portfolio</a></li>
